Prepare ShopEase for deployment