@@ -1,8 +1,10 @@
 package com.shopease.backend.security;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
@@ -25,79 +27,174 @@ public class SecurityConfig {
 
     private final JwtFilter jwtFilter;
 
+    @Value("${app.frontend.url}")
+    private String frontendUrl;
+
     @Autowired
     public SecurityConfig(JwtFilter jwtFilter) {
         this.jwtFilter = jwtFilter;
     }
 
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+    public SecurityFilterChain filterChain(
+            HttpSecurity http
+    ) throws Exception {
 
         http
             .csrf(csrf -> csrf.disable())
-            // Use the corsConfigurationSource defined at the bottom of this file
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .sessionManagement(session -> 
-                session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+
+            .cors(cors ->
+                cors.configurationSource(
+                    corsConfigurationSource()
+                )
             )
+
+            .sessionManagement(session ->
+                session.sessionCreationPolicy(
+                    SessionCreationPolicy.STATELESS
+                )
+            )
+
             .authorizeHttpRequests(auth -> auth
-                //  PUBLIC ENDPOINTS
-                .requestMatchers("/api/auth/**").permitAll()
 
-                //  ALLOW SSLCOMMERZ CALLBACKS (No JWT required)
-                .requestMatchers("/api/orders/payment/**").permitAll()
+                // =============================================
+                // PUBLIC AUTH
+                // =============================================
 
-                // Public GET APIs
-                // Public product list + product details ONLY
-                .requestMatchers(org.springframework.http.HttpMethod.GET, "/api/products").permitAll()
-                .requestMatchers(org.springframework.http.HttpMethod.GET, "/api/products/*").permitAll()
-                .requestMatchers(org.springframework.http.HttpMethod.GET, "/api/reviews/**").permitAll()
-                .requestMatchers(org.springframework.http.HttpMethod.GET, "/images/**").permitAll()
-                
-                // Public Contact form
-                .requestMatchers(org.springframework.http.HttpMethod.POST, "/api/contact").permitAll()
-                .requestMatchers("/api/contact/mine").authenticated()
+                .requestMatchers(
+                    "/api/auth/**"
+                ).permitAll()
 
-                // File uploads require authentication
-                .requestMatchers(org.springframework.http.HttpMethod.POST, "/api/files/upload").authenticated()
+                // =============================================
+                // SSLCommerz CALLBACKS
+                // =============================================
 
-                // ALL OTHER ROUTES NEED JWT
+                .requestMatchers(
+                    "/api/orders/payment/**"
+                ).permitAll()
+
+                // =============================================
+                // PUBLIC PRODUCT APIs
+                // =============================================
+
+                .requestMatchers(
+                    HttpMethod.GET,
+                    "/api/products"
+                ).permitAll()
+
+                .requestMatchers(
+                    HttpMethod.GET,
+                    "/api/products/*"
+                ).permitAll()
+
+                .requestMatchers(
+                    HttpMethod.GET,
+                    "/api/reviews/**"
+                ).permitAll()
+
+                // =============================================
+                // PUBLIC CONTACT
+                // =============================================
+
+                .requestMatchers(
+                    HttpMethod.POST,
+                    "/api/contact"
+                ).permitAll()
+
+                // =============================================
+                // IMAGE UPLOAD
+                // =============================================
+
+                .requestMatchers(
+                    HttpMethod.POST,
+                    "/api/files/upload"
+                ).authenticated()
+
+                // =============================================
+                // EVERYTHING ELSE
+                // =============================================
+
                 .anyRequest().authenticated()
             )
-            .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
+
+            .addFilterBefore(
+                jwtFilter,
+                UsernamePasswordAuthenticationFilter.class
+            );
 
         return http.build();
     }
+
+    // =========================================================
+    // PASSWORD ENCODER
+    // =========================================================
 
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
+    // =========================================================
+    // AUTHENTICATION MANAGER
+    // =========================================================
+
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+    public AuthenticationManager authenticationManager(
+            AuthenticationConfiguration config
+    ) throws Exception {
+
         return config.getAuthenticationManager();
     }
 
-    //  Global CORS Configuration for Spring Security
+    // =========================================================
+    // CORS
+    // =========================================================
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        
-        //  Allow your Frontend (React)
-        configuration.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:3000")); 
-        
-        //  Allow SSLCommerz (Sandbox & Live)
-        // This is what fixes the "Invalid CORS request" from the gateway
-        configuration.addAllowedOriginPattern("https://*.sslcommerz.com");
-        configuration.addAllowedOriginPattern("https://sandbox.sslcommerz.com");
-        
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept"));
+
+        CorsConfiguration configuration =
+                new CorsConfiguration();
+
+        // Production React frontend
+        configuration.setAllowedOrigins(
+                List.of(
+                    frontendUrl,
+                    "http://localhost:5173",
+                    "http://localhost:3000"
+                )
+        );
+
+        configuration.setAllowedMethods(
+                Arrays.asList(
+                    "GET",
+                    "POST",
+                    "PUT",
+                    "PATCH",
+                    "DELETE",
+                    "OPTIONS"
+                )
+        );
+
+        configuration.setAllowedHeaders(
+                Arrays.asList(
+                    "Authorization",
+                    "Content-Type",
+                    "X-Requested-With",
+                    "Accept"
+                )
+        );
+
         configuration.setAllowCredentials(true);
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        UrlBasedCorsConfigurationSource source =
+                new UrlBasedCorsConfigurationSource();
+
+        source.registerCorsConfiguration(
+                "/**",
+                configuration
+        );
+
         return source;
     }
 }
